src/scss/awards.scss
$monospace-font: "Roboto Mono", serif;

.awards-grid {
    max-width: 1400px;
    margin: 30px auto;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
    gap: 20px;
    padding: 0 20px;

    .award {

        $gold: #FFB606;

        background: #1d1d1d;
        color: #fff;
        padding: 5%;
        border-radius: 10px;
        border: 2px solid $gold;

        img {
            width: 100%;
            height: 250px;
            object-fit: contain;
        }

        h2 {
            font-family: $monospace-font;
            font-size: 1.2em;
            margin-block-start: 1.5em;
            margin-block-end: 0.5em;
            color: $gold;
        }
        
        h3 {
            font-size: 1em;
            font-family: $monospace-font;
            margin-block-start: 0;
            margin-block-end: 0;
            color: #fff;
        }

        hr {
            width: 60%;
            border-color: $gold;
            border-top: none;
            margin: 20px auto;
        }

        p {
            color: #cecece;
        }

        box-shadow: 0 0 12px 1px #8a8a8a24, 0px 2px 2px 0px #3e3e3e75;
    }
}

